<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroideAhorcado</string>
    <string name="action_settings">Settings</string>
    <string name="texto_titulo">El Androide Ahorcado</string>
    <string name="texto_subtitulo">¡Introduce una palabra y haz que alguien juegue a adivinarla!</string>
    <string name="texto_boton_palabra">Introducir Palabra</string>
    <string name="texto_boton_jugar">Jugar</string>
    <string name="texto_boton_salir">Salir</string>
    <string name="texto_boton_menu">Ir al Menú</string>
    <string name="texto_auxiliar_icono">Icono ahorcado</string>
    <string name="texto_titulo_insertar">Insertar palabra</string>
    <string name="texto_subtitulo_insertar">Inserta la palabra que tendrá que adivinar el jugador:</string>
    <string name="texto_pista_insertar">Palabra a adivinar</string>
    <string name="texto_boton_insertar">Insertar</string>
    <string name="title_activity_insercion">Inserción</string>
    <string name="error_falta_palabra">Introduce una palabra antes</string>
    <string name="error_formato_palabra">El formato de la palabra no es correcto</string>
    <string name="title_activity_juego">Juego</string>
    <string name="texto_boton_volver">Volver</string>
    <string name="texto_titulo_resultado">Resultado:</string>
    <string name="texto_boton_nuevo_juego">Insertar nueva palabra</string>
    <string name="title_activity_resultado">Resultado</string>
    <string name="resultado_ganar">¡ACERTASTE!</string>
    <string name="resultado_perder">¡PERDISTE!</string>
    <string name="texto_titulo_fallos">Fallos:</string>

</resources>