<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pizarra"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.29"
        android:contentDescription="@string/texto_auxiliar_icono"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_titulo"
        android:gravity="center"
        android:textColor="#FFF"
        android:textSize="8pt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/texto_subtitulo"
       	android:textColor="#FFF"
       	android:textSize="6pt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/boton_palabra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="lanzarInsercion"
        android:text="@string/texto_boton_palabra"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/boton_jugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="lanzarJuego"
        android:text="@string/texto_boton_jugar"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/boton_salir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="salir"
        android:textColor="#FFF"
        android:text="@string/texto_boton_salir" />

</LinearLayout>