<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pizarra"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titulo_insertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_titulo_insertar"
        android:textColor="#FFF"
        android:textSize="8pt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/subtitulo_insertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/texto_subtitulo_insertar"
        android:textColor="#FFF"
        android:textSize="6pt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/campo_insertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#000"
        android:hint="@string/texto_pista_insertar" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/boton_insertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="insertarYSalir"
        android:text="@string/texto_boton_insertar"
        android:textColor="#000" />

</LinearLayout>
